--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
 
-  <ul>
-    <li><a href="#main"></a>Jump to main content</li>
+  <ul class="skip-links">
+    <li><a href="#main">Jump to main content</a></li>
     <li><a href="#nav">Jump to navigation</a></li>
   </ul>
 
@@ -22,7 +22,7 @@
       <i class="icon i-32 push-r-1-4"><img src="images/logo.svg" alt=""></i>
       <span class="logo-text giga icon-label text-left">Arrrgene’s Treasure Tours</span>
     </h1>
-    <nav role="navigation" class="nav unit [ xs-1 s-1 m-1-2 l-1-2 ] pad-t-1-2 pad-b-1-2">
+    <nav role="navigation" id="nav" class="nav unit [ xs-1 s-1 m-1-2 l-1-2 ] pad-t-1-2 pad-b-1-2" tabindex="0">
       <ul class="list-group-inline mega push-0">
         <li><a class="ib gutter-1-4" href="#tours"><span>Tours</span></a></li>
         <li><a class="ib gutter-1-4" href="#ships"><span>Ships</span></a></li>
@@ -31,7 +31,7 @@
     </nav>
   </header>
 
-  <main role="main">
+  <main role="main" id="main" tabindex="0">
     <section id="tours" class="banner embed embed-16by9">
       <img class="embed-item" src="images/banner.jpg" alt="">
       <div class="banner-content pin-c w-1 max-length gutter text-center">
