--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
   <header role="banner" class="masthead grid grid-middle gutter">
     <h1 class="logo push-0 unit [ xs-1 s-1 m-1-2 l-1-2 ] pad-t-1-2 pad-b-1-2">
-      <i class="icon i-32 push-r-1-4"><img src="images/logo.svg" alt=""></i>
-      <span class="logo-text giga icon-label text-left">Arrrgene’s Treasure Tours</span>
+      <i class="icon i-32 push-r-1-4"><img src="images/logo.svg" alt="" role="presentation"></i>
+      <span id="treasure-tours" class="logo-text giga icon-label text-left">Arrrgene’s Treasure Tours</span>
     </h1>
     <nav role="navigation" id="nav" class="nav unit [ xs-1 s-1 m-1-2 l-1-2 ] pad-t-1-2 pad-b-1-2" tabindex="0">
       <ul class="list-group-inline mega push-0">
@@ -33,7 +33,7 @@
 
   <main role="main" id="main" tabindex="0">
     <section id="tours" class="banner embed embed-16by9">
-      <img class="embed-item" src="images/banner.jpg" alt="">
+      <img class="embed-item" src="images/banner.jpg" alt="" role="presentation">
       <div class="banner-content pin-c w-1 max-length gutter text-center">
         <h2 class="push-1-2">Ahoy, me Hearties!</h2>
         <p>Batten down the hatches and sail me corsair to plentiful doubloons.</p>
@@ -44,7 +44,7 @@
     <section id="ships" class="island">
       <div class="card embed embed-golden">
         <div class="card-content pin-c w-1 max-length gutter text-center">
-          <i class="icon i-96 push-1-2"><img src="images/ship.svg" alt=""></i>
+          <i class="icon i-96 push-1-2"><img src="images/ship.svg" alt="" role="presentation"></i>
           <h2 class="push-1-2">Heave Ho!</h2>
           <p>Weigh anchor and hoist the mizzen, ya old salt, aboard shipshape <i>Arrrgonaut</i>.</p>
           <a class="btn btn-light bold" href="#">See the specs</a>
