--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <ul class="list-group-inline mega push-0">
         <li><a class="ib gutter-1-4" href="#tours"><span>Tours</span></a></li>
         <li><a class="ib gutter-1-4" href="#ships"><span>Ships</span></a></li>
-        <li><a class="ib gutter-1-4" href="#"><span>Tickets</span></a></li>
+        <li><a class="ib gutter-1-4" href="#tickets"><span>Tickets</span></a></li>
       </ul>
     </nav>
   </header>
@@ -37,7 +37,7 @@
       <div class="banner-content pin-c w-1 max-length gutter text-center">
         <h2 class="push-1-2">Ahoy, me Hearties!</h2>
         <p>Batten down the hatches and sail me corsair to plentiful doubloons.</p>
-        <a class="btn btn-ghost btn-banner bold" href="#">Book a tour</a>
+        <a class="btn btn-ghost btn-banner bold" href="#nav">Book a tour</a>
       </div>
     </section>
 
@@ -47,7 +47,7 @@
           <i class="icon i-96 push-1-2"><img src="images/ship.svg" alt="" role="presentation"></i>
           <h2 class="push-1-2">Heave Ho!</h2>
           <p>Weigh anchor and hoist the mizzen, ya old salt, aboard shipshape <i>Arrrgonaut</i>.</p>
-          <a class="btn btn-light bold" href="#">See the specs</a>
+          <a class="btn btn-light bold" href="#nav">See the specs</a>
         </div>
       </div>
     </section>
